# DADLY

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 098bcc470c22_adds_hashed_password_to_users_table.py  0eefc1de1a2a_initial_database.py  46ec0ab64dc0_add_unique_constraint_to_pantry_items.py  6a6420cfa7a3_add_unique_constraint_on_user_recipe_.py
backend/app/: config.py  main.py
backend/app/api/: auth.py  health.py  pantry.py  recipes.py  users.py
backend/app/config/: config.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/tests/: __init__.py  conftest.py  test_main.py
backend/tests/test_api/: test_auth.py  test_health.py  test_pantry.py  test_recipes.py  test_users.py
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/context/: DataContext.jsx  DataProvider.jsx
frontend/frontend/: TODO.md
frontend/frontend/src/: ErrorBoundary.jsx
frontend/frontend/src/components/: Header.jsx  Navbar.jsx  SwiperGame.jsx
frontend/service/: AuthService.js  AxiosInstance.jsx  Data.js  Data.jsx
frontend/src/: App.jsx  ErrorBoundary.jsx  index.css  main.jsx
frontend/src/components/: AuthShowcase.jsx  Footer.jsx  Navbar.jsx  RatePopup.jsx  RecipeCarousel.jsx  RecipeFeed.jsx  RecipesPage.jsx  Sidebar.jsx  SwiperGame.jsx  UserProfilePanel.jsx  UserRecipeCard.jsx  UserRecipeList.jsx
frontend/src/constants/: navigation.js
frontend/src/layout/: MainLayout.jsx
frontend/src/pages/: About.jsx  Account.jsx  DietPlans.jsx  Home.jsx  Pantry.jsx  RecipeDetails.jsx  Recipes.jsx  Register.jsx  SignIn.jsx  UserPage.jsx  UserProfile.jsx
frontend/src/utils/: dietaryTags.js
src/constants/: navigation.js
